[package]
name = "test-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.27.5"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2"
nohash-hasher = "0.2.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
rand = "0.8.4"