[package]
name = "test-rust"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo-booleanop = "0.2.1"
druid = "0.7.0"
image = "0.23"
winit = "0.30.5"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "22.1.0"
pollster = "0.2"
nohash-hasher = "0.2.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
rand = "0.8.4"
crossbeam-channel = "0.5.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
shapefile = "0.3.0"
